# rs-lab2

./: Cargo.toml  README.md
src/: components.rs  main.rs
src/components/: chart.rs  form.rs  input.rs
