[package]
name = "rs-lab2"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Pikin <mikejke99@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-iced = "0.4"
iced = { version = "0.5", features = ["canvas", "glow", "tokio"] }
plotters="0.3"
sysinfo = "0.27.0"
chrono = "0.4.23"
plotters-backend = "0.3"
iced_native = "0.7.0"
rand = "0.8.5"
